--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.1.1",
+    "graphql": "^15.3.0",
     "next": "9.5.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
