--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "dev": "next dev -p 5002",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint . --ext .js,.ts --max-warnings 0",
+    "pretest": "npm run lint"
   },
   "dependencies": {
     "@apollo/client": "^3.1.1",
@@ -17,6 +19,12 @@
   "devDependencies": {
     "@types/node": "^14.0.27",
     "@types/react": "^16.9.43",
+    "@typescript-eslint/eslint-plugin": "^3.7.1",
+    "@typescript-eslint/parser": "^3.7.1",
+    "eslint": "^7.5.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "prettier": "^2.0.5",
     "typescript": "^3.9.7"
   }
 }
