--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@apollo/client": "^3.1.1",
     "graphql": "^15.3.0",
     "next": "9.5.1",
+    "node-fetch": "^2.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
     "@types/node": "^14.0.27",
+    "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.43",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
