--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "next": "9.5.1",
     "node-fetch": "^2.6.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "styled-components": "^5.1.1",
+    "styled-normalize": "^8.0.7"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.2",
@@ -25,8 +27,10 @@
     "@types/node": "^14.0.27",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.43",
+    "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
+    "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
