ci: fix workflow definition

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ workflows:
   build:
     jobs:
       - build
-      - deploy_helm:
+      - deploy:
           requires:
             - build
           context: VERCEL
