--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@apollo/client": "^3.1.1",
+    "focus-visible": "^5.1.0",
     "graphql": "^15.3.0",
+    "lazysizes": "^5.2.2",
     "next": "9.5.1",
     "node-fetch": "^2.6.0",
     "react": "16.13.1",
@@ -32,6 +34,7 @@
     "@types/styled-components": "^5.1.2",
     "@typescript-eslint/eslint-plugin": "^3.7.1",
     "@typescript-eslint/parser": "^3.7.1",
+    "babel-plugin-react-remove-properties": "^0.3.0",
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
@@ -39,6 +42,7 @@
     "eslint-plugin-react": "^7.20.5",
     "jest": "^26.2.2",
     "jest-junit": "^11.1.0",
+    "jest-styled-components": "^7.0.2",
     "prettier": "^2.0.5",
     "ts-jest": "^26.1.4",
     "typescript": "^3.9.7",
