feat: show post comments
The post page fetches all the comments of the posts and shows them.
Interaction with the comments is still WIP.

--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "babel-plugin-styled-components": "^1.11.1",
     "eslint": "^7.5.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-jest-dom": "^3.1.6",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.5",
+    "eslint-plugin-testing-library": "^3.4.1",
     "jest": "^26.2.2",
     "jest-junit": "^11.1.0",
     "jest-styled-components": "^7.0.2",
