--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "focus-visible": "^5.1.0",
     "graphql": "^15.3.0",
     "lazysizes": "^5.2.2",
+    "lodash.clonedeep": "^4.5.0",
     "next": "9.5.1",
     "node-fetch": "^2.6.0",
     "react": "16.13.1",
@@ -31,6 +32,7 @@
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
     "@types/jest": "^26.0.8",
+    "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^14.0.27",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.43",
