feat: google analytics tracking

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node-fetch": "^2.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-ga": "^3.1.2",
     "react-modal": "^3.11.2",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7",
