--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "lazysizes": "^5.2.2",
     "lodash.clonedeep": "^4.5.0",
     "next": "9.5.1",
+    "next-seo": "^4.7.3",
     "node-fetch": "^2.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
