--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "focus-visible": "^5.1.0",
     "graphql": "^15.3.0",
     "lazysizes": "^5.2.2",
+    "linkifyjs": "^2.1.9",
     "lodash.clonedeep": "^4.5.0",
     "next": "9.5.1",
     "next-seo": "^4.7.3",
