--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
     "@types/jest": "^26.0.8",
+    "@types/linkifyjs": "^2.1.3",
     "@types/lodash.clonedeep": "^4.5.6",
     "@types/node": "^14.0.27",
     "@types/node-fetch": "^2.5.7",
