--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.1.1",
+    "date-fns": "^2.16.1",
     "focus-visible": "^5.1.0",
     "graphql": "^15.3.0",
     "lazysizes": "^5.2.2",
