--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.1.1",
+    "date-fns": "^2.16.1",
     "focus-visible": "^5.1.0",
     "graphql": "^15.3.0",
     "lazysizes": "^5.2.2",
@@ -56,7 +57,7 @@
     "jest-junit": "^11.1.0",
     "jest-styled-components": "^7.0.2",
     "prettier": "^2.0.5",
-    "stylelint": "^13.6.1",
+    "stylelint": "^13.7.1",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
