--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@apollo/client": "^3.1.1",
     "date-fns": "^2.16.1",
+    "dompurify": "^2.1.0",
     "focus-visible": "^5.1.0",
     "graphql": "^15.3.0",
     "lazysizes": "^5.2.2",
@@ -35,6 +36,7 @@
     "@svgr/webpack": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.2",
     "@testing-library/react": "^10.4.7",
+    "@types/dompurify": "^2.0.4",
     "@types/jest": "^26.0.8",
     "@types/linkifyjs": "^2.1.3",
     "@types/lodash.clonedeep": "^4.5.6",
