feat(profile): two new tabs comments and reputation
The new comment tab shows the user`s comments and it still a WIP (missing tests and infinite scroll)
The reputation tab is a teaser of what`s coming

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -15,6 +15,14 @@
           "$dummyValue"
         ]
       }
+    ],
+    "property-no-unknown": [
+      true,
+      {
+        "ignoreProperties": [
+          "content-visibility"
+        ]
+      }
     ]
   }
 }
