--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-fetch": "^2.6.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-flip-toolkit": "^7.0.12",
     "react-ga": "^3.1.2",
     "react-modal": "^3.11.2",
     "styled-components": "^5.1.1",
@@ -60,7 +61,7 @@
     "jest-junit": "^11.1.0",
     "jest-styled-components": "^7.0.2",
     "prettier": "^2.0.5",
-    "stylelint": "^13.7.1",
+    "stylelint": "^13.7.2",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
