--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
             - ./node_modules
       - run:
           name: Test
-          command: npm run test -- --ci --reporters=default --reporters=jest-junit
+          command: npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand
           environment:
             - JEST_JUNIT_OUTPUT_DIR: ./test-results
       - store_test_results:
