--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "deploy": "vercel"
   },
   "dependencies": {
-    "@apollo/client": "^3.2.1",
     "date-fns": "^2.16.1",
     "dompurify": "^2.1.0",
     "focus-visible": "^5.1.0",
     "graphql": "^15.3.0",
+    "graphql-request": "^3.1.0",
     "lazysizes": "^5.2.2",
     "linkifyjs": "^2.1.9",
     "lodash.clonedeep": "^4.5.0",
@@ -30,12 +30,14 @@
     "react-ga": "^3.1.2",
     "react-intersection-observer": "^8.28.6",
     "react-modal": "^3.11.2",
+    "react-query": "^2.23.0",
     "styled-components": "^5.1.1",
     "styled-normalize": "^8.0.7",
     "swr": "^0.3.4",
     "universal-cookie": "^4.0.3"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^9.5.3",
     "@svgr/webpack": "^5.4.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.0.4",
@@ -43,6 +45,7 @@
     "@types/jest": "^26.0.8",
     "@types/linkifyjs": "^2.1.3",
     "@types/lodash.clonedeep": "^4.5.6",
+    "@types/nock": "^11.1.0",
     "@types/node": "^14.0.27",
     "@types/node-fetch": "^2.5.7",
     "@types/react": "^16.9.43",
@@ -61,6 +64,7 @@
     "jest": "^26.2.2",
     "jest-junit": "^11.1.0",
     "jest-styled-components": "^7.0.2",
+    "nock": "^13.0.4",
     "prettier": "^2.0.5",
     "stylelint": "^13.7.2",
     "stylelint-config-recommended": "^3.0.0",
