--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "focus-visible": "^5.2.0",
     "graphql": "^15.3.0",
     "graphql-request": "^3.1.0",
+    "idb-keyval": "^3.2.0",
     "lazysizes": "^5.2.2",
     "linkifyjs": "^2.1.9",
     "lodash.clonedeep": "^4.5.0",
@@ -61,6 +62,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.4",
     "eslint-plugin-testing-library": "^3.9.1",
+    "fake-indexeddb": "^3.1.2",
     "jest": "^26.5.3",
     "jest-junit": "^12.0.0",
     "jest-styled-components": "^7.0.3",
