--- a/package.json
+++ b/package.json
@@ -22,11 +22,11 @@
     "lazysizes": "^5.2.2",
     "linkifyjs": "^2.1.9",
     "lodash.clonedeep": "^4.5.0",
-    "next": "^9.5.5",
+    "next": "^10.0.0",
     "next-seo": "^4.14.0",
     "node-fetch": "^2.6.1",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-flip-toolkit": "^7.0.12",
     "react-ga": "^3.2.0",
     "react-intersection-observer": "^8.29.1",
