refactor: migrate to preact

--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "lazysizes": "^5.2.2",
     "linkifyjs": "^2.1.9",
     "lodash.clonedeep": "^4.5.0",
-    "next": "^10.0.1",
+    "next": "^10.0.3",
+    "next-plugin-preact": "^3.0.3",
     "next-seo": "^4.17.0",
     "node-fetch": "^2.6.1",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "preact": "^10.5.7",
+    "preact-render-to-string": "^5.1.12",
+    "react": "npm:@preact/compat@0.0.3",
+    "react-dom": "npm:@preact/compat@0.0.3",
     "react-flip-toolkit": "^7.0.13",
     "react-ga": "^3.3.0",
     "react-intersection-observer": "^8.31.0",
@@ -42,7 +45,7 @@
     "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/react": "^11.2.2",
+    "@testing-library/preact": "^2.0.1",
     "@types/dompurify": "^2.0.4",
     "@types/jest": "^26.0.16",
     "@types/linkifyjs": "^2.1.3",
