refactor: update modals

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -24,6 +24,7 @@
         ]
       }
     ],
-    "no-descending-specificity": null
+    "no-descending-specificity": null,
+    "no-duplicate-selectors": null
   }
 }
