--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
     "react-ga": "^3.3.0",
     "react-intersection-observer": "^8.31.0",
     "react-modal": "^3.12.1",
-    "styled-components": "^5.2.1",
     "react-query": "^3.5.12",
+    "styled-components": "^5.2.1",
     "styled-normalize": "^8.0.7",
     "swr": "^0.4.0",
     "universal-cookie": "^4.0.4"
@@ -58,6 +58,9 @@
     "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.13.0",
     "@typescript-eslint/parser": "^4.13.0",
+    "babel-jest": "^26.6.3",
+    "babel-plugin-dynamic-import-node": "^2.3.3",
+    "babel-plugin-macros": "^3.0.1",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.17.0",
@@ -76,7 +79,7 @@
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-processor-styled-components": "^1.10.0",
-    "ts-jest": "^26.4.1",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "vercel": "^21.1.0"
   }
