refactor: migrate to emotion
Use emotion instead of styled-components to reduce bundle size and improve performance

--- a/.babelrc
+++ b/.babelrc
@@ -3,15 +3,8 @@
     "next/babel"
   ],
   "plugins": [
-    [
-      "macros",
-      {
-        "styledComponents": {
-          "ssr": true,
-          "displayName": false
-        }
-      }
-    ]
+    "macros",
+    "@emotion"
   ],
   "env": {
     "production": {
