--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "daily-webapp",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev -p 5002",
@@ -13,8 +12,11 @@
     "deploy": "vercel"
   },
   "dependencies": {
+    "@emotion/react": "^11.1.4",
+    "@emotion/styled": "^11.0.0",
     "date-fns": "^2.16.1",
     "dompurify": "^2.2.6",
+    "emotion-normalize": "^11.0.1",
     "focus-visible": "^5.2.0",
     "graphql": "^15.4.0",
     "graphql-request": "^3.4.0",
@@ -35,12 +37,13 @@
     "react-intersection-observer": "^8.31.0",
     "react-modal": "^3.12.1",
     "react-query": "^3.5.16",
-    "styled-components": "^5.2.1",
-    "styled-normalize": "^8.0.7",
     "swr": "^0.4.0",
     "universal-cookie": "^4.0.4"
   },
   "devDependencies": {
+    "@emotion/babel-plugin": "^11.1.2",
+    "@emotion/eslint-plugin": "^11.0.0",
+    "@emotion/jest": "^11.1.0",
     "@next/bundle-analyzer": "^10.0.5",
     "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
@@ -55,14 +58,12 @@
     "@types/node-fetch": "^2.5.8",
     "@types/react": "^17.0.0",
     "@types/react-modal": "^3.10.6",
-    "@types/styled-components": "^5.1.7",
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "babel-jest": "^26.6.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-react-remove-properties": "^0.3.0",
-    "babel-plugin-styled-components": "^1.12.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-jest-dom": "^3.6.5",
@@ -72,13 +73,10 @@
     "fake-indexeddb": "^3.1.2",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
-    "jest-styled-components": "^7.0.3",
     "nock": "^13.0.6",
     "prettier": "^2.2.1",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
-    "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "vercel": "^21.1.0"
