--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.0.0",
+    "@types/google.analytics": "0.0.41",
     "classnames": "^2.2.6",
     "date-fns": "^2.16.1",
     "dompurify": "^2.2.6",
@@ -34,13 +35,11 @@
     "react": "npm:@preact/compat@0.0.3",
     "react-dom": "npm:@preact/compat@0.0.3",
     "react-flip-toolkit": "^7.0.13",
-    "react-ga": "^3.3.0",
     "react-intersection-observer": "^8.31.0",
     "react-modal": "^3.12.1",
     "react-query": "^3.7.1",
     "react-transition-group": "^4.4.1",
-    "swr": "^0.4.1",
-    "universal-cookie": "^4.0.4"
+    "swr": "^0.4.1"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.1.2",
