--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "lodash.clonedeep": "^4.5.0",
     "next": "^10.0.5",
     "next-plugin-preact": "^3.0.3",
+    "next-pwa": "^5.0.5",
     "next-seo": "^4.19.0",
     "node-fetch": "^2.6.1",
     "preact": "^10.5.12",
