--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-modal": "^3.12.1",
     "react-query": "^3.12.0",
     "react-transition-group": "^4.4.1",
+    "react-virtual": "^2.4.0",
     "subscriptions-transport-ws": "^0.9.18",
     "swr": "^0.4.2"
   },
