--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "next-pwa": "^5.0.5",
     "next-seo": "^4.20.0",
     "node-fetch": "^2.6.1",
+    "postcss": "^8.2.6",
+    "postcss-focus-visible": "^5.0.0",
+    "postcss-import": "^14.0.0",
+    "postcss-preset-env": "^6.7.0",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
     "react": "npm:@preact/compat@0.0.3",
@@ -41,7 +45,8 @@
     "react-query": "^3.12.0",
     "react-transition-group": "^4.4.1",
     "subscriptions-transport-ws": "^0.9.18",
-    "swr": "^0.4.2"
+    "swr": "^0.4.2",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.2.0",
