--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-testing-library": "^3.10.1",
     "fake-indexeddb": "^3.1.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
     "nock": "^13.0.8",
