--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
     "nock": "^13.0.8",
+    "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.2.1",
     "stylelint": "^13.11.0",
     "stylelint-config-recommended": "^3.0.0",
