--- a/package.json
+++ b/package.json
@@ -31,6 +31,10 @@
     "next-pwa": "^5.0.5",
     "next-seo": "^4.20.0",
     "node-fetch": "^2.6.1",
+    "postcss": "^8.2.6",
+    "postcss-focus-visible": "^5.0.0",
+    "postcss-import": "^14.0.0",
+    "postcss-preset-env": "^6.7.0",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
     "react": "npm:@preact/compat@0.0.3",
@@ -41,7 +45,8 @@
     "react-query": "^3.12.0",
     "react-transition-group": "^4.4.1",
     "subscriptions-transport-ws": "^0.9.18",
-    "swr": "^0.4.2"
+    "swr": "^0.4.2",
+    "tailwindcss": "^2.0.3"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.2.0",
@@ -76,9 +81,11 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-testing-library": "^3.10.1",
     "fake-indexeddb": "^3.1.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
     "nock": "^13.0.8",
+    "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.2.1",
     "stylelint": "^13.11.0",
     "stylelint-config-recommended": "^3.0.0",
