--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.1.5",
     "@types/google.analytics": "0.0.41",
+    "balloon-css": "^1.2.0",
     "classnames": "^2.2.6",
     "date-fns": "^2.17.0",
     "dompurify": "^2.2.6",
