--- a/package.json
+++ b/package.json
@@ -32,10 +32,6 @@
     "next-pwa": "^5.0.5",
     "next-seo": "^4.20.0",
     "node-fetch": "^2.6.1",
-    "postcss": "^8.2.6",
-    "postcss-focus-visible": "^5.0.0",
-    "postcss-import": "^14.0.0",
-    "postcss-preset-env": "^6.7.0",
     "preact": "^10.5.12",
     "preact-render-to-string": "^5.1.12",
     "react": "npm:@preact/compat@0.0.3",
@@ -47,8 +43,7 @@
     "react-query": "^3.12.0",
     "react-transition-group": "^4.4.1",
     "subscriptions-transport-ws": "^0.9.18",
-    "swr": "^0.4.2",
-    "tailwindcss": "^2.0.3"
+    "swr": "^0.4.2"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.2.0",
@@ -57,6 +52,7 @@
     "@next/bundle-analyzer": "^10.0.7",
     "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
+    "@tailwindcss/jit": "^0.1.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/preact": "^2.0.1",
     "@types/classnames": "^2.2.11",
@@ -72,6 +68,7 @@
     "@types/react-transition-group": "^4.4.1",
     "@typescript-eslint/eslint-plugin": "^4.15.2",
     "@typescript-eslint/parser": "^4.17.0",
+    "autoprefixer": "^10.2.5",
     "babel-jest": "^26.6.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^3.0.1",
@@ -87,10 +84,16 @@
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
     "nock": "^13.0.8",
+    "postcss": "^8.2.8",
+    "postcss-custom-media": "^8.0.0",
+    "postcss-focus-visible": "^5.0.0",
+    "postcss-import": "^14.0.0",
+    "postcss-nesting": "^7.0.1",
     "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.2.1",
     "stylelint": "^13.11.0",
     "stylelint-config-recommended": "^3.0.0",
+    "tailwindcss": "^2.0.3",
     "ts-jest": "^26.5.3",
     "typescript": "^4.2.3",
     "vercel": "^21.3.3"
