--- a/.env
+++ b/.env
@@ -3,3 +3,4 @@ NEXT_PUBLIC_API_URL=http://localhost:4000
 NEXT_PUBLIC_SUBS_URL=ws://localhost:5000/graphql
 NEXT_PUBLIC_DOMAIN=localhost
 NEXT_PUBLIC_GA=UA-109059578-2
+NEXT_PUBLIC_AMPLITUDE=46a18c8e538f37fbb74150e458b5c574
