--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@types/google.analytics": "0.0.41",
+    "amplitude-js": "^8.1.0",
     "balloon-css": "^1.2.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.20.0",
@@ -54,6 +55,7 @@
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/preact": "^2.0.1",
     "@testing-library/user-event": "^13.1.3",
+    "@types/amplitude-js": "^7.0.1",
     "@types/classnames": "^2.2.11",
     "@types/dompurify": "^2.2.1",
     "@types/jest": "^26.0.22",
