--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "daily-webapp",
   "private": true,
+  "engines": {
+    "npm": "^7.0.0"
+  },
   "scripts": {
     "dev": "next dev -p 5002",
     "build": "next build",
