--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "daily-webapp",
-  "private": true,
+  "name": "webapp",
   "scripts": {
     "dev": "next dev -p 5002",
     "build": "next build",
