--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -11,7 +11,9 @@
     "test:ci": "npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand",
     "deploy": "vercel"
   },
+  "prettier": "@daily/prettier-config",
   "dependencies": {
+    "@daily/shared": "*",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@types/google.analytics": "0.0.41",
@@ -45,6 +47,8 @@
     "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
+    "@daily/eslint-config": "*",
+    "@daily/prettier-config": "*",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/eslint-plugin": "^11.2.0",
     "@emotion/jest": "^11.3.0",
@@ -84,6 +88,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
+    "next-transpile-modules": "^6.4.0",
     "nock": "^13.0.11",
     "postcss": "^8.2.10",
     "postcss-custom-media": "^8.0.0",
