--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,7 +7,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "pretest": "npm run lint && npm run lint:css",
     "test": "node --expose-gc ./node_modules/.bin/jest --logHeapUsage",
-    "test:ci": "npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand"
+    "test:ci": "JEST_JUNIT_OUTPUT_NAME=shared npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand"
   },
   "prettier": "@daily/prettier-config",
   "peerDependencies": {
