--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,8 +1,10 @@
 {
   "name": "@daily/shared",
   "version": "0.0.0",
-  "main": "./src/index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.es.js",
   "scripts": {
+    "build": "rollup -c",
     "lint:css": "stylelint '**/*.{ts,tsx,css}'",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "pretest": "npm run lint && npm run lint:css",
