build: alias peer deps of the shared package to prevent dups

--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@daily/eslint-config",
+  "name": "@dailydotdev/eslint-config",
   "version": "0.0.0",
   "main": "index.js",
   "devDependencies": {
