--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -8,12 +8,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "pretest": "npm run lint && npm run lint:css",
     "test": "node --expose-gc ./node_modules/.bin/jest --logHeapUsage",
-    "test:ci": "JEST_JUNIT_OUTPUT_NAME=webapp  npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand",
+    "test:ci": "JEST_JUNIT_OUTPUT_NAME=webapp.xml  npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand",
     "deploy": "vercel"
   },
-  "prettier": "@daily/prettier-config",
+  "prettier": "@dailydotdev/prettier-config",
   "dependencies": {
-    "@daily/shared": "*",
+    "@dailydotdev/shared": "*",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@types/google.analytics": "0.0.41",
@@ -49,8 +49,8 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
-    "@daily/eslint-config": "*",
-    "@daily/prettier-config": "*",
+    "@dailydotdev/eslint-config": "*",
+    "@dailydotdev/prettier-config": "*",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/eslint-plugin": "^11.2.0",
     "@emotion/jest": "^11.3.0",
@@ -79,6 +79,7 @@
     "babel-jest": "^26.6.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
