--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@daily/shared",
+  "name": "@dailydotdev/shared",
   "version": "0.0.0",
-  "main": "./dist/index.js",
-  "module": "./dist/index.es.js",
+  "main": "./src/index.ts",
+  "license": "AGPL-3.0",
   "scripts": {
     "build": "rollup -c",
     "lint:css": "stylelint '**/*.{ts,tsx,css}'",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "pretest": "npm run lint && npm run lint:css",
     "test": "node --expose-gc ./node_modules/.bin/jest --logHeapUsage",
-    "test:ci": "JEST_JUNIT_OUTPUT_NAME=shared npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand"
+    "test:ci": "JEST_JUNIT_OUTPUT_NAME=shared.xml npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand"
   },
-  "prettier": "@daily/prettier-config",
+  "prettier": "@dailydotdev/prettier-config",
   "peerDependencies": {
     "classnames": "^2.3.1",
     "next": "^10.1.3",
@@ -19,8 +19,8 @@
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@daily/eslint-config": "*",
-    "@daily/prettier-config": "*",
+    "@dailydotdev/eslint-config": "*",
+    "@dailydotdev/prettier-config": "*",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/eslint-plugin": "^11.2.0",
     "@emotion/jest": "^11.3.0",
@@ -66,5 +66,6 @@
     "stylelint-config-recommended": "^4.0.0",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4"
-  }
+  },
+  "dependencies": {}
 }
