--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -8,10 +8,12 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "pretest": "npm run lint && npm run lint:css",
     "test": "node --expose-gc ./node_modules/.bin/jest --logHeapUsage",
-    "test:ci": "npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand",
+    "test:ci": "JEST_JUNIT_OUTPUT_NAME=webapp.xml  npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand",
     "deploy": "vercel"
   },
+  "prettier": "@dailydotdev/prettier-config",
   "dependencies": {
+    "@dailydotdev/shared": "*",
     "@emotion/react": "^11.1.5",
     "@emotion/styled": "^11.3.0",
     "@types/google.analytics": "0.0.41",
@@ -46,6 +48,9 @@
     "subscriptions-transport-ws": "^0.9.18"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.13.0",
+    "@dailydotdev/eslint-config": "*",
+    "@dailydotdev/prettier-config": "*",
     "@emotion/babel-plugin": "^11.3.0",
     "@emotion/eslint-plugin": "^11.2.0",
     "@emotion/jest": "^11.3.0",
@@ -74,6 +79,7 @@
     "babel-jest": "^26.6.3",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^3.0.1",
+    "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
@@ -85,6 +91,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
+    "next-transpile-modules": "^6.4.0",
     "nock": "^13.0.11",
     "postcss": "^8.2.10",
     "postcss-custom-media": "^8.0.0",
