build: fix build error

--- a/packages/shared/.stylelintrc
+++ b/packages/shared/.stylelintrc
@@ -20,6 +20,12 @@
         ]
       }
     ],
+    "selector-pseudo-class-no-unknown": [
+      true,
+      {
+        "ignorePseudoClasses": ["global"]
+      }
+    ],
     "no-descending-specificity": null,
     "no-duplicate-selectors": null
   }
