--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -6,16 +6,24 @@
       "dom.iterable",
       "esnext"
     ],
-    "declaration": true,
-    "declarationDir": "dist",
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": false,
+    "forceConsistentCasingInFileNames": true,
+    "noEmit": true,
+    "esModuleInterop": true,
     "module": "esnext",
-    "sourceMap": true,
-    "jsx": "react",
     "moduleResolution": "node",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve"
   },
-  "include": ["src/**/*"],
+  "include": [
+    "next-env.d.ts",
+    "custom.d.ts",
+    "src/**/*.ts",
+    "src/**/*.tsx"
+  ],
   "exclude": [
     "node_modules",
     "build"
