build: fix type issues

--- a/packages/shared/.stylelintrc
+++ b/packages/shared/.stylelintrc
@@ -3,6 +3,16 @@
     "stylelint-config-recommended"
   ],
   "rules": {
+    "at-rule-no-unknown": [
+      true,
+      {
+        "ignoreAtRules": [
+          "extends",
+          "tailwind",
+          "screen"
+        ]
+      }
+    ],
     "selector-type-no-unknown": [
       true,
       {
@@ -23,7 +33,9 @@
     "selector-pseudo-class-no-unknown": [
       true,
       {
-        "ignorePseudoClasses": ["global"]
+        "ignorePseudoClasses": [
+          "global"
+        ]
       }
     ],
     "no-descending-specificity": null,
