--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -59,6 +59,7 @@
     "@testing-library/user-event": "^13.1.3",
     "@types/classnames": "^2.2.11",
     "@types/dompurify": "^2.2.1",
+    "@types/google.analytics": "0.0.41",
     "@types/jest": "^26.0.22",
     "@types/linkifyjs": "^2.1.3",
     "@types/lodash.clonedeep": "^4.5.6",
