--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -16,11 +16,13 @@
     "date-fns": "^2.20.0",
     "dompurify": "^2.2.7",
     "graphql-request": "^3.4.0",
+    "idb-keyval": "^5.0.4",
     "next": "^10.2.0",
     "react": "^17.0.5",
     "react-contexify": "^5.0.0",
     "react-dom": "^17.0.5",
-    "react-modal": "^3.12.1"
+    "react-modal": "^3.12.1",
+    "react-query": "^3.13.8"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.14.1",
@@ -54,6 +56,7 @@
     "eslint-plugin-testing-library": "^4.2.0",
     "glob": "^7.1.6",
     "graphql-request": "^3.4.0",
+    "idb-keyval": "^5.0.4",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
@@ -69,6 +72,7 @@
     "react-contexify": "^5.0.0",
     "react-dom": "^17.0.2",
     "react-modal": "^3.12.1",
+    "react-query": "^3.13.8",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "tailwindcss": "^2.1.1",
@@ -78,6 +82,7 @@
   "dependencies": {
     "amplitude-js": "^8.1.0",
     "node-fetch": "^2.6.1",
-    "lazysizes": "^5.3.2"
+    "lazysizes": "^5.3.2",
+    "subscriptions-transport-ws": "^0.9.18"
   }
 }
