--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -40,8 +40,7 @@
     "react-modal": "^3.12.1",
     "react-query": "^3.13.8",
     "react-tooltip": "^4.2.18",
-    "react-transition-group": "^4.4.1",
-    "subscriptions-transport-ws": "^0.9.18"
+    "react-transition-group": "^4.4.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
@@ -99,6 +98,7 @@
     "prettier": "^2.2.1",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
+    "subscriptions-transport-ws": "^0.9.18",
     "tailwindcss": "^2.1.1",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4",
