--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-testing-library": "^4.2.0",
+    "fake-indexeddb": "^3.1.2",
     "glob": "^7.1.6",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
