--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -33,6 +33,7 @@
     "react": "npm:@preact/compat@0.0.3",
     "react-contexify": "^5.0.0",
     "react-dom": "npm:@preact/compat@0.0.3",
+    "react-intersection-observer": "^8.31.0",
     "react-flip-toolkit": "^7.0.13",
     "react-modal": "^3.12.1",
     "react-query": "^3.13.8",
