--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -1,21 +1,24 @@
 {
-  "name": "webapp",
+  "name": "extension",
+  "version": "2.32.0",
   "scripts": {
-    "dev": "next dev -p 5002",
-    "build": "next build",
-    "start": "next start",
+    "dev:chrome": "cross-env NODE_ENV=development cross-env TARGET_BROWSER=chrome webpack --watch",
+    "dev:firefox": "cross-env NODE_ENV=development cross-env TARGET_BROWSER=firefox webpack --watch",
+    "dev:opera": "cross-env NODE_ENV=development cross-env TARGET_BROWSER=opera webpack --watch",
+    "build:chrome": "cross-env NODE_ENV=production cross-env TARGET_BROWSER=chrome webpack",
+    "build:firefox": "cross-env NODE_ENV=production cross-env TARGET_BROWSER=firefox webpack",
+    "build:opera": "cross-env NODE_ENV=production cross-env TARGET_BROWSER=opera webpack",
+    "build": "npm run build:chrome && npm run build:firefox && npm run build:opera",
     "lint:css": "stylelint '**/*.{ts,tsx,css}'",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "pretest": "npm run lint && npm run lint:css",
     "test": "node --expose-gc ./node_modules/.bin/jest --logHeapUsage",
-    "test:ci": "JEST_JUNIT_OUTPUT_NAME=webapp.xml  npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand",
-    "deploy": "vercel"
+    "test:ci": "JEST_JUNIT_OUTPUT_NAME=extension.xml  npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand"
   },
   "prettier": "@dailydotdev/prettier-config",
   "dependencies": {
+    "@babel/runtime": "^7.14.0",
     "@dailydotdev/shared": "*",
-    "@emotion/react": "^11.1.5",
-    "@emotion/styled": "^11.3.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.20.0",
     "dompurify": "^2.2.7",
@@ -23,31 +26,27 @@
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
     "idb-keyval": "^5.0.4",
-    "lodash.clonedeep": "^4.5.0",
     "next": "^10.2.0",
-    "next-plugin-preact": "^3.0.4",
-    "next-pwa": "^5.2.5",
-    "next-seo": "^4.23.0",
     "preact": "^10.5.13",
     "preact-render-to-string": "^5.1.19",
     "react": "npm:@preact/compat@0.0.3",
     "react-contexify": "^5.0.0",
     "react-dom": "npm:@preact/compat@0.0.3",
     "react-intersection-observer": "^8.31.0",
-    "react-flip-toolkit": "^7.0.13",
     "react-modal": "^3.12.1",
     "react-query": "^3.13.8",
     "react-tooltip": "^4.2.18",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "webextension-polyfill-ts": "^0.22.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.1",
+    "@babel/plugin-transform-runtime": "^7.14.1",
+    "@babel/preset-env": "^7.14.1",
+    "@babel/preset-react": "^7.13.13",
     "@babel/preset-typescript": "^7.13.0",
     "@dailydotdev/eslint-config": "*",
     "@dailydotdev/prettier-config": "*",
-    "@emotion/babel-plugin": "^11.3.0",
-    "@emotion/eslint-plugin": "^11.2.0",
-    "@emotion/jest": "^11.3.0",
-    "@next/bundle-analyzer": "^10.1.3",
     "@svgr/cli": "^5.5.0",
     "@svgr/webpack": "^5.5.0",
     "@tailwindcss/jit": "^0.1.18",
@@ -58,21 +57,26 @@
     "@types/dompurify": "^2.2.1",
     "@types/google.analytics": "0.0.41",
     "@types/jest": "^26.0.22",
-    "@types/lodash.clonedeep": "^4.5.6",
     "@types/nock": "^11.1.0",
     "@types/node": "^14.14.37",
     "@types/node-fetch": "^2.5.10",
     "@types/react": "^17.0.5",
     "@types/react-modal": "^3.12.0",
     "@types/react-transition-group": "^4.4.1",
+    "@types/webpack": "^4.41.25",
     "@typescript-eslint/eslint-plugin": "^4.21.0",
     "@typescript-eslint/parser": "^4.22.0",
     "autoprefixer": "^10.2.5",
     "babel-jest": "^26.6.3",
+    "babel-loader": "^8.2.1",
     "babel-plugin-dynamic-import-node": "^2.3.3",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-module-resolver": "^4.1.0",
     "babel-plugin-react-remove-properties": "^0.3.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.3.1",
+    "cross-env": "^7.0.2",
+    "css-loader": "^5.0.1",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest-dom": "^3.8.0",
@@ -80,25 +84,37 @@
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-testing-library": "^4.2.0",
     "fake-indexeddb": "^3.1.2",
+    "filemanager-webpack-plugin": "^3.0.0-alpha.7",
+    "fork-ts-checker-webpack-plugin": "^6.0.1",
+    "html-webpack-plugin": "^4.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.6.3",
     "jest-junit": "^12.0.0",
-    "next-transpile-modules": "^6.4.0",
+    "mini-css-extract-plugin": "^1.3.1",
     "nock": "^13.0.11",
     "node-fetch": "^2.6.1",
+    "node-sass": "^4.14.1",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^8.2.10",
     "postcss-custom-media": "^8.0.0",
     "postcss-focus-visible": "^5.0.0",
     "postcss-import": "^14.0.1",
+    "postcss-loader": "^4.0.4",
     "postcss-nesting": "^7.0.1",
     "postcss-simple-vars": "^6.0.3",
     "prettier": "^2.2.1",
+    "resolve-url-loader": "^3.1.2",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "subscriptions-transport-ws": "^0.9.18",
     "tailwindcss": "^2.1.1",
+    "terser-webpack-plugin": "^4.2.3",
     "ts-jest": "^26.5.4",
     "typescript": "^4.2.4",
-    "vercel": "^21.3.3"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^4.2.0",
+    "webpack-extension-reloader": "^1.1.4",
+    "wext-manifest-loader": "^2.2.1",
+    "wext-manifest-webpack-plugin": "^1.2.1"
   }
 }
