ci: log errors when concating package-jsons

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ commands:
     steps:
       - run:
           name: Combine package-lock.json files to single file
-          command: npx lerna la -a | awk -F packages '{printf "\"packages%s/package-lock.json\" ", $2}' | xargs cat > << parameters.filename >> 2>/dev/null
+          command: lerna la -a | awk -F packages '{printf "\"packages%s/package-lock.json\" ", $2}' | xargs cat > << parameters.filename >>
 
 jobs:
   build:
@@ -25,8 +25,11 @@ jobs:
             - deps-v1-{{ .Branch }}
             - deps-v1-
       - run:
+          name: Install lerna
+          command: npm i -g lerna
+      - run:
           name: Install dependencies
-          command: npx lerna bootstrap
+          command: lerna bootstrap
       - save_cache:
           key: deps-v1-{{ .Branch }}-{{ checksum "package-lock.json" }}-{{ checksum "combined-package-lock.txt" }}
           paths:
@@ -38,7 +41,7 @@ jobs:
             - ./packages/extension/node_modules
       - run:
           name: Test
-          command: npx lerna run test:ci
+          command: lerna run test:ci
           environment:
             JEST_JUNIT_OUTPUT_DIR: ../../test-results
       - store_test_results:
