--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -1,9 +1,10 @@
 {
   "name": "webapp",
+  "version": "0.0.0",
   "scripts": {
     "dev": "next dev -p 5002",
     "build": "next build",
-    "start": "next start",
+    "start": "nexlernt start",
     "lint:css": "stylelint '**/*.{ts,tsx,css}'",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "pretest": "npm run lint && npm run lint:css",
