--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -1,10 +1,11 @@
 {
   "name": "webapp",
+  "version": "0.0.0",
   "scripts": {
     "dev": "next dev -p 5002",
     "build": "next build",
-    "start": "next start",
-    "lint:css": "stylelint '**/*.{ts,tsx}'",
+    "start": "nexlernt start",
+    "lint:css": "stylelint '**/*.{ts,tsx,css}'",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "pretest": "npm run lint && npm run lint:css",
     "test": "node --expose-gc ./node_modules/.bin/jest --logHeapUsage",
@@ -92,7 +93,7 @@
     "postcss-import": "^14.0.1",
     "postcss-nesting": "^7.0.1",
     "postcss-simple-vars": "^6.0.3",
-    "prettier": "^2.2.1",
+    "prettier": "^2.3.0",
     "stylelint": "^13.12.0",
     "stylelint-config-recommended": "^4.0.0",
     "subscriptions-transport-ws": "^0.9.18",
