--- a/packages/extension/.env
+++ b/packages/extension/.env
@@ -5,4 +5,4 @@ NEXT_PUBLIC_DOMAIN=localhost
 NEXT_PUBLIC_GA=UA-109059578-2
 NEXT_PUBLIC_AMPLITUDE=46a18c8e538f37fbb74150e458b5c574
 
-NEXT_PUBLIC_WEBAPP_URL=/
+NEXT_PUBLIC_WEBAPP_URL=http://localhost:5002/
