--- a/packages/extension/package.json
+++ b/packages/extension/package.json
@@ -13,7 +13,7 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx --max-warnings 0",
     "pretest": "npm run lint && npm run lint:css",
     "test": "node --expose-gc ./node_modules/.bin/jest --logHeapUsage",
-    "test:ci": "JEST_JUNIT_OUTPUT_NAME=extension.xml  npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand"
+    "test:ci": "JEST_JUNIT_OUTPUT_NAME=extension.xml npm run test -- --ci --reporters=default --reporters=jest-junit --runInBand"
   },
   "prettier": "@dailydotdev/prettier-config",
   "dependencies": {
@@ -77,6 +77,7 @@
     "copy-webpack-plugin": "^6.3.1",
     "cross-env": "^7.0.2",
     "css-loader": "^5.0.1",
+    "dotenv-webpack": "^7.0.2",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-jest-dom": "^3.8.0",
