--- a/packages/extension/src/manifest.json
+++ b/packages/extension/src/manifest.json
@@ -6,11 +6,11 @@
   "description": "daily.dev is the easiest way to stay updated on the latest programming news",
   "homepage_url": "https://daily.dev",
   "icons": {
-    "16": "assets/icons/16.png",
-    "48": "assets/icons/48.png",
-    "128": "assets/icons/128.png"
+    "16": "icons/16.png",
+    "48": "icons/48.png",
+    "128": "icons/128.png"
   },
-  "permissions": [
+  "__prod__permissions": [
     "storage",
     "alarms",
     "https://daily.dev/",
@@ -18,14 +18,19 @@
     "https://dailynow.co/",
     "https://*.dailynow.co/"
   ],
+  "__dev__permissions": [
+    "storage",
+    "alarms",
+    "http://localhost/"
+  ],
   "optional_permissions": [
     "topSites"
   ],
-  "content_security_policy": "script-src 'self'; object-src 'self'",
+  "content_security_policy": "script-src 'self' https://www.google-analytics.com; object-src 'self'",
   "browser_action": {
     "default_icon": {
-      "16": "assets/icons/action_16.png",
-      "32": "assets/icons/action_32.png"
+      "16": "icons/action_16.png",
+      "32": "icons/action_32.png"
     }
   },
   "background": {
