--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -37,7 +37,8 @@
     "react-modal": "^3.12.1",
     "react-query": "^3.13.8",
     "react-tooltip": "^4.2.18",
-    "react-transition-group": "^4.4.1"
+    "react-transition-group": "^4.4.1",
+    "react-virtual": "^2.7.1"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.13.0",
