--- a/packages/extension/.env.production
+++ b/packages/extension/.env.production
@@ -3,5 +3,6 @@ NEXT_PUBLIC_SUBS_URL=wss://subs.daily.dev/graphql
 NEXT_PUBLIC_DOMAIN=daily.dev
 NEXT_PUBLIC_GA=UA-109059578-1
 NEXT_PUBLIC_AMPLITUDE=ee64cef405fb51cba273308cfcef7228
+NEXT_PUBLIC_FLAGSMITH=8gucquFbJSKT7kYDKpqZzp
 
 NEXT_PUBLIC_WEBAPP_URL=https://app.daily.dev/
