--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -94,6 +94,7 @@
   "dependencies": {
     "amplitude-js": "^8.1.0",
     "balloon-css": "^1.2.0",
+    "flagsmith": "^1.4.1",
     "lazysizes": "^5.3.2",
     "linkifyjs": "^2.1.9",
     "node-fetch": "^2.6.1",
