Added post css mixins

--- a/packages/shared/.stylelintrc
+++ b/packages/shared/.stylelintrc
@@ -9,7 +9,9 @@
         "ignoreAtRules": [
           "extends",
           "tailwind",
-          "screen"
+          "screen",
+          "define-mixin",
+          "mixin"
         ]
       }
     ],
