added router progress bar

--- a/packages/webapp/package.json
+++ b/packages/webapp/package.json
@@ -14,6 +14,7 @@
   },
   "prettier": "@dailydotdev/prettier-config",
   "dependencies": {
+    "@dailydotdev/react-contexify": "^5.0.0",
     "@dailydotdev/shared": "*",
     "classnames": "^2.3.1",
     "date-fns": "^2.25.0",
@@ -26,10 +27,10 @@
     "next-plugin-preact": "^3.0.6",
     "next-pwa": "^5.4.0",
     "next-seo": "^4.28.1",
+    "nextjs-progressbar": "0.0.13",
     "preact": "^10.5.15",
     "preact-render-to-string": "^5.1.19",
     "react": "npm:@preact/compat@0.0.3",
-    "@dailydotdev/react-contexify": "^5.0.0",
     "react-dom": "npm:@preact/compat@0.0.3",
     "react-flip-toolkit": "^7.0.13",
     "react-intersection-observer": "^8.32.2",
